--- a/bosch_line_detection/templates/server/upload.html
+++ b/bosch_line_detection/templates/server/upload.html
@@ -18,5 +18,9 @@
             <input type = "file" name = "file" />
             <input type = "submit" value="Upload"/>
         </form>
+        <p><a href = "{{ url_for('server.train') }}">
+            <b>Do the training now?</b></a></p>
+        <p><a href = "{{ url_for('server.predict') }}">
+            <b>Do the prediction now?</b></a></p>
     </body>
 </html>
